// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`swapDepositAddressReady creates a swap deposit channel entry 1`] = `
{
  "channelId": 1n,
  "createdAt": Any<Date>,
  "depositAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "estimatedExpiryAt": 2023-11-09T11:01:30.000Z,
  "expectedDepositAmount": "0",
  "expiryBlock": null,
  "id": Any<BigInt>,
  "isExpired": false,
  "issuedBlock": 120,
  "openedThroughBackend": false,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainExpiryBlock": 256n,
}
`;

exports[`swapDepositAddressReady does not overwrite expectedDepositAmount with zero 1`] = `
{
  "channelId": 1n,
  "createdAt": Any<Date>,
  "depositAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "DOT",
  "estimatedExpiryAt": 2023-11-09T11:05:00.000Z,
  "expectedDepositAmount": "650",
  "expiryBlock": null,
  "id": Any<BigInt>,
  "isExpired": false,
  "issuedBlock": 10,
  "openedThroughBackend": false,
  "srcAsset": "ETH",
  "srcChain": "Ethereum",
  "srcChainExpiryBlock": 256n,
}
`;
